<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Ledgerly</string>

    <!-- Auth -->
    <string name="add_email">Add Email Address</string>
    <string name="add_password">Add Password</string>
    <string name="back">Back</string>
    <string name="loginpage">LOGIN PAGE</string>
    <string name="registrationpage">REGISTRATION PAGE</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Welcome / Home -->
    <string name="welcome">WELCOME</string>
    <string name="easy_ledgerly">EASY LEDGERLY</string>
    <string name="enter_username">Enter Username</string>
    <string name="move_to_ledgerly">Move To Ledgerly</string>

    <!-- Ledger Manager -->
    <string name="ledgerly_manager">LEDGERLY MANAGER</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="add_customer">ADD CUSTOMER</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="unknown_user">Unknown User</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="delete_prompt">Are you sure you want to delete this customer?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="jazzcash_not_installed">JazzCash Not Installed</string>
    <string name="install_jazzcash_prompt">Please install JazzCash to proceed.</string>

    <!-- SMS / validation -->
    <string name="invalid_amount">Invalid amount entered</string>
    <string name="sms_template">Your transaction “%1$s” of %2$s %3$s has been recorded.</string>

    <!-- used for empty-field validation -->
    <string name="field_required">This field is required</string>

    <!-- After saving to Realtime DB -->
    <string name="tx_saved">Transaction saved</string>
    <string name="tx_save_failed">Failed to save transaction</string>

    <!-- SMS feedback -->
    <string name="sms_sent">SMS sent</string>
    <string name="sms_failed">SMS failed, please try again</string>

    <!-- SMS template for receive -->
    <string name="sms_template_receive">
        Your transaction «%1$s» of %2$s %3$s has been received.
    </string>

    <!-- Reports -->
    <string name="generate_pdf">Generate PDF</string>
    <string name="send_report">Send Report</string>
    <string name="request">Request</string>

    <!-- Dialogs -->
    <string name="update_delete_dialog">Update And Delete Dialog</string>
    <string name="update">UPDATE</string>
    <!-- For EditTransaction dialog -->
    <string name="confirmation">Confirmation</string>
    <string name="cancel">Cancel</string>

        <!-- existing strings... -->

        <string name="label_name">Name</string>
        <string name="label_date">Date</string>
        <string name="label_time">Time</string>
        <string name="label_amount">Amount</string>


    <!-- Currency -->
    <string-array name="currency_options">
        <item>Rupees</item>
        <item>Dollar</item>
        <item>Riyal</item>
        <item>Yen</item>
    </string-array>

</resources>
