<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app   ="http://schemas.android.com/apk/res-auto"
    xmlns:tools ="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ledgerly_accent"
    android:padding="16dp"
    tools:context=".SendTransaction">

    <!-- Back Button -->
    <Button
        android:id="@+id/btnBackSendTransaction"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/ledgerly_primary"
        android:layout_marginBottom="16dp"/>

    <!-- Name Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNameSendTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textColor="@color/ledgerly_primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Amount Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAmountSendTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:textColor="@color/ledgerly_primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Send Button -->
    <Button
        android:id="@+id/btnSendTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:backgroundTint="@color/ledgerly_primary"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</LinearLayout>
